# SerialPortHelper

./: App_icon.rc  CMakeLists.txt  Main.qml  README.md  main.cpp  resource.qrc
InterFace/: SerialPortEngine.cpp  SerialPortEngine.h  SerialPortRecvArea.cpp  SerialPortRecvArea.h  SerialPortSendArea.cpp  SerialPortSendArea.h  SerialPortSetting.cpp  SerialPortSetting.h
UI/: RecvAreaUi.qml  SPHButton.qml  SPHCheckBox.qml  SPHComboBox.qml  SPHIconButton.qml  SPHMessage.qml  SPHMessageBox.qml  SPHToolTip.qml  SendAreaUi.qml  SerialPortSettingUi.qml  SerialPortTitle.qml
